# image-color-extractor

./: AlgoButton.qml  AppMenu.qml  CMakeLists.txt  ColorPanel.qml  Main.qml  README.md  Theme.qml  assets.qrc  colorextractormodel.cpp  colorextractormodel.h  colorextractorthread.cpp  colorextractorthread.h  cropper.cpp  cropper.h  main.cpp
